--- a/css/index.css
+++ b/css/index.css
@@ -45,21 +45,125 @@
 }
 
 .main-title {
-  width: 300px;
+  width: 250px;
   background-color: rgba(255, 255, 255, 0.85);
   margin: 50px auto;
-  padding: 30px 30px;
+  padding: 30px 20px;
 }
 
 .main-title h1 {
   font-family: 'Alegreya Sans';
   font-weight: 800;
-  font-size: 54px;
+  font-size: 44px;
   text-align: center;
 }
 
-/* ==========   Top Nabigation Panel   ========== */
-/* ==========   Top Nabigation Panel   ========== */
+/* ================   Main Nav   ================ */
+
+.main-block-container {
+  width: 1170px;
+  margin: 0 auto;
+  /* background:  linear-gradient(to right, red, blue); */
+  background: linear-gradient(90deg, crimson, tomato, gold, yellowgreen, olivedrab, skyblue, rebeccapurple);
+  padding: 3px;
+}
+
+.main-nav-block {
+  box-sizing: border-box;
+  width: 100%;
+  background: white;
+}
+
+.main-nav-block a {
+  text-decoration: none;
+}
+
+.main-nav-item:hover {
+  background-color: #fef0f4;
+}
+
+.main-nav-item {
+  width: 168px;
+  margin-right: -5px;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+.main-nav-link:nth-child(1) .main-nav-item {
+  border-bottom: 3px solid #dc133c;
+}
+
+.main-nav-link:nth-child(2) .main-nav-item {
+  border-bottom: 3px solid #ff6248;
+}
+
+.main-nav-link:nth-child(3) .main-nav-item {
+  border-bottom: 3px solid #ffd701;
+}
+
+.main-nav-link:nth-child(4) .main-nav-item {
+  border-bottom: 3px solid #9acc32;
+}
+
+.main-nav-link:nth-child(5) .main-nav-item {
+  border-bottom: 3px solid #6c8d22;
+}
+
+.main-nav-link:nth-child(6) .main-nav-item {
+  border-bottom: 3px solid #87ceeb;
+}
+
+.main-nav-link:nth-child(7  ) .main-nav-item {
+  border-bottom: 3px solid #663399;
+}
+
+.main-nav-item img {
+  display: inline-block;
+  position: relative;
+  top: 2px;
+  margin-left: 6px;
+}
+
+.main-nav-item h1 {
+  display: inline-block;
+  color: black;
+  text-decoration: none;
+  font-family: 'Alegreya Sans';
+  font-size: 16px;
+  font-weight: 800;
+  margin: 25px 0;
+}
+
+/* ==========   Promotion Main Block   ========== */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ==========   Top Nabigation Panel   ========== */
 /* ==========   Top Nabigation Panel   ========== */
 /* ==========   Top Nabigation Panel   ========== */
