--- a/css/news.css
+++ b/css/news.css
@@ -1,196 +1,12 @@
-/* ==========   Top Nabigation Panel   ========== */
-
-* {
-  font-family: 'Alegreya Sans';
-}
-
-.top-nav {
-  width: 100%;
-  background-color: #000;
-}
-
-.top-nav-container {
-  width: 1170px;
-  margin: 0 auto;
-}
-
-.top-nav-item {
-  display: inline-block;
-  margin-right: -6px;
-  width: 232px;
-  text-align: center;
-  padding: 12px 0;
-  border-left: 2px dotted gray;
-  border-right: 2px dotted gray;
-}
-
-.top-nav-item a {
-  font-family: 'Alegreya Sans';
-  color: white;
-  text-decoration: none;
-}
-
-/* =============   Main Background   ============ */
-
-.main-background {
-  position: absolute;
-  width: 100%;
-  height: 500px;
-  z-index: 1;
-  background-image: url('../img/main-background.jpg');
-  background-size: 140%;
-  background-position-y: -200px;
-  background-position-x: center;
-  background-repeat: no-repeat;
-}
-
-.main-title {
-  width: 250px;
-  background-color: rgba(255, 255, 255, 0.85);
-  margin: 50px auto;
-  padding: 30px 20px;
-}
-
-.main-title h1 {
-  font-family: 'Alegreya Sans';
-  font-weight: 800;
-  font-size: 44px;
-  text-align: center;
-}
-
-/* ================   Main Nav   ================ */
-
-.main-block-container {
-  width: 1170px;
-  margin: 0 auto;
-  background: linear-gradient(90deg, crimson, tomato, gold, yellowgreen, olivedrab, skyblue, rebeccapurple);
-  padding: 3px;
-}
-
-.main-nav-block {
-  box-sizing: border-box;
-  width: 100%;
-  background: white;
-}
-
-.main-nav-block a {
-  text-decoration: none;
-}
-
-.main-nav-item:hover {
-  background-color: #fef0f4;
-  box-sizing: border-box;
-}
+/* ==========   Main Block   ========== */
 
 .main-nav-link:nth-child(7) .main-nav-item {
   background-color: #fef0f4;
 }
 
-.main-nav-item {
-  width: 168px;
-  height: 80px;
-  margin-right: -5px;
-  display: inline-block;
-  box-sizing: border-box;
-}
-
-.main-nav-link:nth-child(1) .main-nav-item {
-  border-bottom: 3px solid #dc133c;
-}
-
-.main-nav-link:nth-child(2) .main-nav-item {
-  border-bottom: 3px solid #ff6248;
-}
-
-.main-nav-link:nth-child(3) .main-nav-item {
-  border-bottom: 3px solid #ffd701;
-}
-
-.main-nav-link:nth-child(4) .main-nav-item {
-  border-bottom: 3px solid #9acc32;
-}
-
-.main-nav-link:nth-child(5) .main-nav-item {
-  border-bottom: 3px solid #6c8d22;
-}
-
-.main-nav-link:nth-child(6) .main-nav-item {
-  border-bottom: 3px solid #87ceeb;
-}
-
 .main-nav-link:nth-child(7) .main-nav-item {
-  border-bottom: 8px solid #663399;
-}
-
-.main-nav-link:nth-child(1) .main-nav-item:hover {
-  border-bottom: 8px solid #dc133c;
-}
-
-.main-nav-link:nth-child(2) .main-nav-item:hover {
-  border-bottom: 8px solid #ff6248;
-}
-
-.main-nav-link:nth-child(3) .main-nav-item:hover {
-  border-bottom: 8px solid #ffd701;
-}
-
-.main-nav-link:nth-child(4) .main-nav-item:hover {
-  border-bottom: 8px solid #9acc32;
-}
-
-.main-nav-link:nth-child(5) .main-nav-item:hover {
   border-bottom: 8px solid #6c8d22;
 }
 
-.main-nav-link:nth-child(6) .main-nav-item:hover {
-  border-bottom: 8px solid #87ceeb;
-}
+/* ==========   News Block   ========== */
 
-.main-nav-link:nth-child(7  ) .main-nav-item:hover {
-  border-bottom: 8px solid #663399;
-}
-
-.main-nav-item img {
-  display: inline-block;
-  position: relative;
-  top: 2px;
-  margin-left: 6px;
-}
-
-.main-nav-item h1 {
-  display: inline-block;
-  color: black;
-  text-decoration: none;
-  font-family: 'Alegreya Sans';
-  font-size: 16px;
-  font-weight: 800;
-  margin: 25px 0;
-}
-
-/* ==========   Promotion Main Block   ========== */
-
-.promotion-block {
-  background: white;
-}
-
-.promotion-text-block {
-  padding: 30px 10px;
-}
-
-.promotion-text-block p {
-  font-family: 'Alegreya Sans';
-  display: inline-block;
-  font-weight: 600;
-  font-size: 21px;
-}
-
-.promotion-icon {
-  display: inline-block;
-  position: relative;
-  top: 2px;
-}
-
-.promotion-main-img {
-  width: 100%;
-  margin-bottom: -3px;
-}
