--- a/css/careers.css
+++ b/css/careers.css
@@ -51,6 +51,7 @@
 }
 
 .item-text-block {
+  cursor: pointer;
   position: relative;
   display: inline-block;
   background: white;
@@ -78,6 +79,7 @@
 }
 
 .under {
+  cursor: pointer;
   text-decoration: underline;
 }
 
