--- a/css/financial.css
+++ b/css/financial.css
@@ -32,6 +32,7 @@
 .financial-center-block {
   width: 600px;
   margin: 0 auto;
+  margin-top: 30px;
   margin-bottom: 30px;  
 }
 
@@ -54,6 +55,7 @@
 }
 
 .download-btn {
+  cursor: pointer;
   color: #3a7594;
   display: block;
   border: 2px solid #3a7594;
