--- a/css/tickets.css
+++ b/css/tickets.css
@@ -9,3 +9,120 @@
 }
 
 /* ==========   Tickets Block   ========== */
+
+.tickets-block {
+  background: white;
+  padding: 0 25px 15px;
+}
+
+.icon {
+  margin-top: 25px;
+  margin-right: 6px;
+}
+
+.ticket-title {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 35px;
+}
+
+.subtext {
+  font-size: 22px;
+  margin-bottom: 30px;
+}
+
+/* Top Form */
+
+.top-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.top-form-item input {
+  box-sizing: border-box;
+  width: 350px;
+  height: 40px;
+  padding-left: 20px;
+}
+
+.top-form-item p {
+  margin-bottom: 8px;
+  font-size: 20px;
+}
+
+.center-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Left Form */
+
+.left-form {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.left-form-item p {
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.input-text {
+  box-sizing: border-box;
+  width: 450px;
+  height: 40px;
+  padding-left: 20px;
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 20px;
+  margin: 0 10px;
+}
+
+/* Render Block 536x160 */
+
+.render-block {
+  width: 650px;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.render-item {
+  width: 650px;
+  height: 160px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.render-item:nth-child(1) {
+  background-image: url('../img/Funny\ Island\ Ticket-2x.png');
+}
+
+.render-item:nth-child(2) {
+  background-image: url('../img/Funny\ Island\ Ticket\ FP-2x.png');
+}
+
+.render-item:nth-child(3) {
+  background-image: url('../img/Funny\ Island\ Ticket-2x.png');
+}
+
+.render-item p {
+  margin-top: 110px;
+  margin-left: 50px;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.confirm-btn {
+  display: block;
+  margin-top: 30px;
+  padding: 15px 0;
+  font-size: 16px;
+  width: 100%;
+}
