--- a/css/financial.css
+++ b/css/financial.css
@@ -5,7 +5,7 @@
 }
 
 .main-nav-link:nth-child(4) .main-nav-item {
-  border-bottom: 8px solid #6c8d22;
+  border-bottom: 8px solid #9acc32;
 }
 
 /* ==========   Financial Block   ========== */
