--- a/css/news.css
+++ b/css/news.css
@@ -5,7 +5,7 @@
 }
 
 .main-nav-link:nth-child(7) .main-nav-item {
-  border-bottom: 8px solid #6c8d22;
+  border-bottom: 8px solid #663399;
 }
 
 /* ==========   News Block   ========== */
