--- a/css/tickets.css
+++ b/css/tickets.css
@@ -5,7 +5,7 @@
 }
 
 .main-nav-link:nth-child(2) .main-nav-item {
-  border-bottom: 8px solid #6c8d22;
+  border-bottom: 8px solid #ff6248;
 }
 
 /* ==========   Tickets Block   ========== */
