--- a/css/attractions.css
+++ b/css/attractions.css
@@ -5,7 +5,7 @@
 }
 
 .main-nav-link:nth-child(3) .main-nav-item {
-  border-bottom: 8px solid #6c8d22;
+  border-bottom: 8px solid #ffd701;
 }
 
 /* ==========   Attractions Block   ========== */
