--- a/css/careers.css
+++ b/css/careers.css
@@ -5,7 +5,7 @@
 }
 
 .main-nav-link:nth-child(6) .main-nav-item {
-  border-bottom: 8px solid #6c8d22;
+  border-bottom: 8px solid #87ceeb;
 }
 
 /* ==========   Careers Block   ========== */
