--- a/css/promotion.css
+++ b/css/promotion.css
@@ -5,7 +5,7 @@
 }
 
 .main-nav-link:nth-child(1) .main-nav-item {
-  border-bottom: 8px solid #6c8d22;
+  border-bottom: 8px solid #dc133c;
 }
 
 /* ==========   Promotion Block   ========== */
